--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				</div>
 			</div>
 			<div class="header-actions pull-right hidden-xs padding-top-xs-4">
-				<a  class="btn btn-success btn-sm" href="#">
-                    Call To Action
+				<a  class="btn btn-success btn-sm" href="http://uber.designwall.com">
+                    Get Started Now
                 </a>
 			</div>
 		</div>
@@ -69,7 +69,7 @@
 										<h2 class="section-title lead-big text-right-md"><div ><p>There are thousand of no for every yes&nbsp;</p></div></h2>
 									</div>
 									<div class="col-md-8 padding-left-md-6 padding-top-md-6 padding-bottom-md-6" style="border-left: 1px solid #fff; margin-left: -1px;">
-										<div class="lead-small margin-top-xs-2 margin-bottom-xs-0"><div ><p>Our Big Boss say \"Drop everything others\" and make <b><u>ONE</u></b>&nbsp;product that everyone never ever seen before.</p></div></div>
+										<div class="lead-small margin-top-xs-2 margin-bottom-xs-0"><div ><p>Our Big Boss said \"Drop everything\" and make <b><u>ONE</u></b>&nbsp;product that everyone never ever seen before.</p></div></div>
 									</div>
 								</div>
 							</div>
@@ -136,7 +136,7 @@
 							<div class="container item-effect text-center-xs">
 								<div class="row">
 									<div class="col-xs-12">
-										<h2 class="section-title lead-big"><div >See JA Teline V in action now</div></h2>
+										<h2 class="section-title lead-big"><div ><p>See Uber Generator in action now</p></div></h2>
 									</div>
 								</div>
 								<div class="row">
