--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 									</div>
 								</div>
 								<div class="margin-top-sm-4">
-									<a  class="btn btn-primary border-radius-extra-xs margin-right-xs-3" href="#button-1">
-                    Live Demo
+									<a  class="btn btn-primary border-radius-extra-xs margin-right-xs-3" href="http://uber.designwall.com/">
+                    Start Building
                 </a>
-									<a  class="btn btn-default btn-line border-radius-extra-xs" href="#button-1">
-                    More Info
+									<a  class="btn btn-default btn-line border-radius-extra-xs" href="http://uber-generator.github.io/83a709857a46c82124e019702b5226cf/">
+                    Example Page
                 </a>
 								</div>
 							</div>
